# moreHUDInventory

./: .clang-format  .gitmodules  AHZConsole.cpp  AHZInventoryMenu.h  AHZPapyrusMoreHudIE.cpp  AHZPapyrusMoreHudIE.h  AHZScaleform.cpp  AHZScaleform.h  AHZScaleformHook.cpp  AHZScaleformHook.h  AHZmoreHUDInventory.rc  AhzMoreHudIE.psc  ArchiveFiles.ps1  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GameTypes_SKSE_PATCH.h  PapyrusMoreHudIE.cpp  PapyrusMoreHudIE.h  README.md  build-all-debug.ps1  build-debug.ps1  build.ps1  exports.def  main.cpp  moreHUDInventory.vcxproj  resource.h  vcpkg.json
AS2/: AHZmoreHudIE_BaseIcons.fla  AHZmoreHudIE_BaseLargeItemCard.fla  AHZmoreHudInventory.fla  README.md  customLargeItemCard.fla  iEquipQB.pdn  iEquipQ_Left.emf
AS2/ahz/scripts/widgets/: AHZmoreHUDInventory.as  AHZmoreHUDInventoryIcons.as
AS2/ahz/scripts/widgets/AHZCommon/: AHZIconContainer.as
AS2/ahz/scripts/widgets/AHZCommon/skse/: skse.as
AS2/ahz/scripts/widgets/AHZCommon/skse/plugins/: AHZmoreHUDInventory.as
AS2/ahz/scripts/widgets/AHZDefines/: AHZCCSkyUIFrames.as  AHZCCSurvFrames.as  AHZConfigManager.as  AHZDefines.as  AHZVanillaFrames.as
AS2/assets/: CompFound.emf  CompNew.emf  DBM_RN_Displayed_Black.emf  DBM_RN_Found.emf  DBM_RN_New_Black.emf  LargeItemCard.ai  Poison.ai  Poison2.ai  ench.ai  ench2.ai  enchKnown.ai  enchKnown2.ai  eye.ai  eye2.ai  health.ai  health2.ai  iEquipQ.emf  iEquipQ.pdn  iEquipQ_Both.emf  iEquipQ_Right.emf
BetaTesting/: AHZmoreHUDInventory1_0_17.7z  AHZmoreHUDInventory1_0_17Loose.7z  AHZmoreHUDInventory1_0_17a.7z  AHZmoreHUDInventory1_0_17aLoose.7z  AHZmoreHUDInventory1_0_17b.7z  AHZmoreHUDInventory1_0_17bLoose.7z  AHZmoreHUDInventory1_0_17c.7z  AHZmoreHUDInventory1_0_17cLoose.7z  AHZmoreHUDInventory1_0_17d.7z  AHZmoreHUDInventory1_0_17dLoose.7z  AHZmoreHUDInventory1_0_17e.7z  AHZmoreHUDInventory1_0_17eLoose.7z  AHZmoreHUDInventory1_0_18.7z  AHZmoreHUDInventory1_0_18Loose.7z  DD Tweaks for moreHUDIE 1.0.17d.7z  moreHUDIEConfigTesting.7z  moreHUDIEConfigTesting1_0_15rc1.7z  moreHUDIEConfigTesting2.7z
BetaTesting/Data/Interface/: AHZmoreHUDInventory.swf
BetaTesting/Data/Interface/moreHUDIE/: config.txt
Data/: AHZIEquipTest.esp  AHZmoreHUDInventory.esl
Data/BetaTesting/: moreHUDIEIconLoading_BetaTesting.7z
Data/Interface/: AHZmoreHUDInventory.swf
Data/Interface/exported/moreHUDIE/: baseIcons.swf  baseLargeItemCard.swf  config.txt  icons.swf
Data/Interface/moreHUDIE/: config.txt  customLargeItemCard.swf
Data/Scripts/: AHZIEquipStartupScript.pex  AHZIEquipTestQuest.pex  AhzMoreHudIE.pex
Data/Source/Scripts/: AHZIEquipStartupScript.psc  AHZIEquipTestQuest.psc  AhzMoreHudIE.psc
Scripts/: ArchiveFiles.ps1  ReleaseFiles.ps1  bsafilelist.txt
cmake/: Version.h.in  headerlist.cmake  sourcelist.cmake  version.rc.in
include/: AHZConfiguration.h  AHZConsole.h  AHZPapyrusMoreHudIE.h  AHZScaleform.h  AHZUtilities.h  ActorValueList.h  Events.h  HashUtil.h  PCH.h  Papyrus.h  Scaleform.h
src/: AHZConfiguration.cpp  AHZConsole.cpp  AHZPapyrusMoreHudIE.cpp  AHZScaleform.cpp  AHZScaleformHook.cpp  AHZUtilities.cpp  ActorValueList.cpp  Events.cpp  HashUtil.cpp  Papyrus.cpp  Scaleform.cpp  main.cpp
